Change About Me.

--- a/apps/templates/home/experience.html
+++ b/apps/templates/home/experience.html
@@ -6,7 +6,7 @@
                 <h1 class="text-gradient text-info">Work Experience</h1>
             </div>
             <div class="col-lg-6">
-                <h3 class="text-gradient text-primary mb-0 mt-2">ForwardDevs | Lagos, LA. <br>
+                <h3 class="text-gradient text-primary mb-0 mt-2">ForwardDevs | Lagos, LA <br>
                     Python Developer/Intern</h3>
                 <h5>July 2018 - June 2019</h5>
                 <div class="py-3 info-horizontal">
@@ -14,8 +14,9 @@
                         <i class="fas fa-ship opacity-10"></i>
                     </div>
                     <div class="description ps-3">
-                        <p class="mb-0">Collaborated with the team to troubleshoot and resolve software defects,
-                            enhancing the stability and reliability of applications.</p>
+                        <p class="mb-0">Made over 500 insertions and 100 deletions to 4 central Firmware repositories
+                            in less than 6 months.
+                        </p>
                     </div>
                 </div>
                 <div class="py-3 info-horizontal">
@@ -23,8 +24,8 @@
                         <i class="fas fa-handshake opacity-10"></i>
                     </div>
                     <div class="description ps-3">
-                        <p class="mb-0">Designed and developed responsive user interfaces using modern front-end
-                            frameworks like Flask, ensuring seamless functionality.</p>
+                        <p class="mb-0">Launched a company-wide digitized filing system that led to an increase in
+                            efficiency for all departments by 20% on average.</p>
                     </div>
                 </div>
                 <div class="py-3 info-horizontal">
@@ -56,30 +57,12 @@
                 </div>
             </div>
             <div class="col-lg-6 mt-lg-0 mt-5 ps-lg-0 ps-0">
-                <h3 class="text-gradient text-primary mb-0 mt-2">InterTech | Port Harcourt, PH. <br>
+                <h3 class="text-gradient text-primary mb-0 mt-2">Intertek | Port Harcourt, PH <br>
                     Python Developer</h3>
-                <h5>August 2021 - March 2023</h5>
+                <h5>February 2021 - December 2022</h5>
                 <div class="py-3 info-horizontal">
                     <div class="icon icon-shape rounded-circle bg-gradient-primary shadow text-center">
                         <i class="fas fa-ship opacity-10"></i>
-                    </div>
-                    <div class="description ps-3">
-                        <p class="mb-0">Developed reusable front-end components using HTML, CSS, and JavaScript,
-                            contributing to faster development cycles.</p>
-                    </div>
-                </div>
-                <div class="py-3 info-horizontal">
-                    <div class="icon icon-shape rounded-circle bg-gradient-primary shadow text-center">
-                        <i class="fas fa-ship opacity-10"></i>
-                    </div>
-                    <div class="description ps-3">
-                        <p class="mb-0">Assisted in building and maintaining Flask web applications,
-                            gaining hands-on experience in full stack development practices.</p>
-                    </div>
-                </div>
-                <div class="py-3 info-horizontal">
-                    <div class="icon icon-shape rounded-circle bg-gradient-primary shadow text-center">
-                        <i class="fas fa-handshake opacity-10"></i>
                     </div>
                     <div class="description ps-3">
                         <p class="mb-0">Assisted in writing efficient Python scripts for data processing and automation,
@@ -88,11 +71,32 @@
                 </div>
                 <div class="py-3 info-horizontal">
                     <div class="icon icon-shape rounded-circle bg-gradient-primary shadow text-center">
+                        <i class="fas fa-ship opacity-10"></i>
+                    </div>
+                    <div class="description ps-3">
+                        <p class="mb-0">Utilized version control and CI/CD pipelines to ensure efficient code
+                            management and continuous deployment of application updates.
+                        </p>
+                    </div>
+                </div>
+                <div class="py-3 info-horizontal">
+                    <div class="icon icon-shape rounded-circle bg-gradient-primary shadow text-center">
+                        <i class="fas fa-handshake opacity-10"></i>
+                    </div>
+                    <div class="description ps-3">
+                        <p class="mb-0">Implemented robust back-end functionalities using Django, including data
+                            models, views, and templates.
+                            .</p>
+                    </div>
+                </div>
+                <div class="py-3 info-horizontal">
+                    <div class="icon icon-shape rounded-circle bg-gradient-primary shadow text-center">
                         <i class="fas fa-hourglass opacity-10"></i>
                     </div>
                     <div class="description ps-3">
-                        <p class="mb-0">Utilized version control and CI/CD pipelines to ensure efficient code management
-                            and continuous deployment of application updates.</p>
+                        <p class="mb-0">Developed reusable front-end components using HTML, CSS, Bootstrap and
+                            JavaScript, contributing to faster development cycles.
+                        </p>
                     </div>
                 </div>
                 <div class="py-3 info-horizontal">
