--- a/apps/templates/home/about.html
+++ b/apps/templates/home/about.html
@@ -29,22 +29,27 @@
                                     <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90"
                                          aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
+                                <span>Django | Flask</span> <span class="pull-right">95%</span>
+                                <div class="progress mt-1 mb-3">
+                                    <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95"
+                                         aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <span>Web-Scraping | Selenium | BS4</span> <span class="pull-right">80%</span>
+                                <div class="progress mt-1 mb-3">
+                                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="80"
+                                         aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <span>JavaScript | Jquery | AJAX</span> <span class="pull-right">70%</span>
+                                <div class="progress mt-1 mb-3">
+                                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="70"
+                                         aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
                                 <span>HTML | CSS3 | Bootstrap</span> <span class="pull-right">85%</span>
                                 <div class="progress mt-1 mb-3">
                                     <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85"
                                          aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
-                                <span>Wed Development (Flask)</span> <span class="pull-right">95%</span>
-                                <div class="progress mt-1 mb-3">
-                                    <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95"
-                                         aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                <span>JavaScript</span> <span class="pull-right">50%</span>
-                                <div class="progress mt-1 mb-3">
-                                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50"
-                                         aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                <span>Database Management (MySQL, PostgreSQL)</span> <span
+                                <span>Database | PostgreSQL | SQL</span> <span
                                     class="pull-right">85%</span>
                                 <div class="progress mt-1 mb-3">
                                     <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85"
@@ -77,11 +82,12 @@
                                     </h5>
                                 </div>
                                 <p class="lead">
-                                    Certified Python Developer offering 5 years of extensive experience and exceptional
-                                    analytical and critical thinking skills. <br>
-                                    Solid understanding of software development life cycle and it's
-                                    methodologies such as waterfall, Agile-Scrum, unit testing, cloud server
-                                    hosting, Restful APIs, Git and VCS. <br>
+                                    Python developer with 3 years of hands-on experience, demonstrating exceptional
+                                    analytical and critical thinking skills. Proficient in the software development life
+                                    cycle and its methodologies, including waterfall, Agile-Scrum, unit testing, TDD,
+                                    and CI/CD. Experienced in cloud server hosting, Restful APIs, web-scraping, Git, and
+                                    version control systems. Skilled in utilizing Python frameworks such as Django,
+                                    Flask, Selenium, Beautiful Soup, Pandas, SciPy, NumPy, Matplotlib, and Plotly. <br>
                                 </p>
                             </div>
                             <div class="about-me pt-4 pt-md-0">
@@ -100,7 +106,7 @@
                                 </div>
                                 <p class="lead">
                                     Federal University Of Technology, Akure <br>
-                                    B.Tech, Computer Science <span class="px-4">10/2014 - 11/2019</span>
+                                    B.Tech, Computer Science <span class="px-4">11/2014 - 10/2019</span>
                                     <br>
                                 </p>
                             </div>
@@ -112,8 +118,8 @@
                                     </h5>
                                 </div>
                                 <p class="lead">
-                                    • Certified Entry-Level Python Programmer <br>
-                                    • Certified Associate in Python Programming
+                                    • Certified Associate in Python Programming <br>
+                                    • Certified Entry-Level Python Programmer
                                 </p>
                             </div>
                         </div>
