--- a/apps/templates/home/header.html
+++ b/apps/templates/home/header.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-7 text-center mx-auto">
                     <h1 class="text-white pt-3 mt-n5">Welcome To My Portfolio</h1>
-                    <p class="lead text-white mt-3">Python Developer, Web Developer (Flask), Database & Deployment Expert.
+                    <p class="lead text-white mt-3">Python Developer, Django, Flask, APIs, Database & Deployment Expert.
                         <br/> Thanks for checking my profile</p>
                 </div>
             </div>
